Add shorthand for declaring fields of the same type.
Add 'obfuscated' attribute to generate static constructor for enums.